--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,14 +18,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <TextView
-        android:id="@+id/textView"
+    <CheckBox
+        android:id="@+id/descanso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="356dp"
-        android:text="Hello World!"
+        android:layout_marginStart="157dp"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="158dp"
+        android:layout_marginBottom="342dp"
+        android:text="Modo descanso"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
