--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu1"
-        android:title="@string/menu_1"
+        android:title="@string/lista_treinos"
         app:showAsAction="never"/>
 
 </menu>
